--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-		<title>Fudge Summary - d20 Rolls With Aspects Revised</title>
+		<title>Free Form RPG</title>
 		<base href="../">
 		<meta id="root-path" root-path="../">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=5.0">
