--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<meta id="root-path" root-path="../">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=5.0">
 		<meta charset="UTF-8">
+		<style>
+			body {
+				background-color: #232a38; /* Dark background color */
+				color: #cfcfcf;           /* White text color */
+				font-family: Arial, sans-serif; /* Optional: Set a font family */
+			}
+		</style>
 		<meta name="description" content="Free Flow RPG">
 		<meta property="og:title" content="Free Flow RPG">
 		<meta property="og:description" content="Free Flow RPG">
